// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Greeting Component > Greeting component renders correctly 1`] = `
<div>
  Hello 
</div>
`;

exports[`Greeting Component > prop working 1`] = `
<div>
  Hello 
  Universe
</div>
`;
